<resources>
    <string name="app_name">Fay&amp;BerApp</string>
    <string name="button">Soin Choisi</string>
    <string name="etE_mail">E-Mail</string>
    <string name="etNomComplet">Nom Complet</string>
    <string name="etPhone">(+509) 4692-2424</string>
    <string name="telephone">Telephone</string>
    <string name="fiche_enregistrement">Fiche Enregistrement</string>
    <string name="date_de_naissance">Date de Naissance</string>
    <string name="DateNaissance">Date de naissance</string>
    <string name="envoyer">Envoyer</string>
    <string name="nom_complet">Nom Complet</string>
    <string name="autres_choix">«Autres choix»</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="android_studio">Android Studio</string>
    <string name="education_et_reeducation">Education et Reeducation</string>
    <string name="nos_services">Nos Services</string>
    <string name="prevention_de_la_maladie">Prevention de la maladie</string>
    <string name="promotion_de_la_sante">Promotion de la sante</string>
    <string name="soins_de_base_de_nursing">Soins de Base de Nursing</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_sign_in">Connecter</string>
    <string name="title_activity_sign_up">Enregistrer</string>
    <string name="share">Share</string>
    <string name="sexeTitle">Sexe</string>
    <string name="profil_poste">Profil Poste</string>
    <string name="name">Name</string>
    <string name="ivprofil">ivProfil</string>
    <string name="description_de_service">Description de service ...</string>
    <string name="service_titre">Service titre</string>
    <string name="information"><![CDATA[Le service des soins infirmiers à domicile est une alternative à l\'hospitalisation. Il favorise, d\'une part, la continuité des soins jusqu\'au domicile des patients/clients, d\'autre part, la liberté de choix des patients/clients de rester chez eux s\'ils le souhaitent et si leur état de santé le permet à un cout moindre que ce de l\'hospitalisation conventionnelle. \tBien qu\'il soit un secteur, en pleine expansion dans les pays occidentaux, encore en développement dans les pays du tiers-monde, est aujourd\'hui effectif en HAITI avec nous. \tNotre mission est d\'accompagner le patient/client, considérer dans sa globalité comme être bio-psycho-socio spirituel, jusqu\'à lui permettre de retrouver et/ou de conserver sa santé, de retrouver le moyen de fonctionner à la dimension souhaitée ou possible. \tFay&amp;Ber Nursing Care Agency à pour objectif de: favoriser la continuité des soins à domicile à un prix abordable au grand public; assurer la mise en application des prescriptions médicales établis par le ou les médecins prescripteurs; contribuer de manière active à réduire le taux de mortalité lié aux problèmes de soins et ou non accès aux soins; mettre en place des dispositifs permettant de traiter en ambulatoire des pathologies chroniques et autres.]]></string>
    <string name="message">Message</string>
    <string name="contactez_nous">Contactez-Nous</string>
    <string name="details_service">Soins et procédés visant à s\'assurer l’hygiène corporelle du patient client et de son environnement.Soins et procédés visant à s\'assurer l’hygiène corporelle du patient client et de son environnement.</string>
    <string name="itin_raire"><u>Itinéraire :</u></string>
    <string name="adress">#6 Rue Assad, Avenue Jean Paul II/Bois Patate, Port-au-Prince 6120</string>
    <string name="text_s">FayBer Nursing Care Agency   Services médicaux de proximité</string>

    <string-array name="hours_list">
        <item>8h - 9h</item>
        <item>9h - 10h</item>
        <item>10h - 11h</item>
        <item>11h - 12h</item>
        <item>12h - 13h</item>
        <item>13h - 14h</item>
        <item>14h - 15h</item>
        <item>15h - 16h</item>
        <item>16h - 17h</item>
        <item>17h - 18h</item>
    </string-array>
</resources>
