<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivProfil"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:scrollbarSize="@android:dimen/app_icon_size"
        app:srcCompat="@mipmap/ic_googlebusiness"
        android:contentDescription="@string/ivprofil" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="13dp"
        android:layout_toEndOf="@+id/ivProfil"
        android:layout_toRightOf="@+id/ivProfil"
        android:text="@string/name"
        android:textColor="?android:attr/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvProfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvName"
        android:layout_alignStart="@+id/tvName"
        android:layout_below="@+id/tvName"
        android:text="@string/profil_poste" />

</RelativeLayout>