<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/background_light"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactez_nous"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvContact"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="770dp"
                android:layout_height="59dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvChoix"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcherlogo"
                tools:ignore="ContentDescription,UnknownIdInLayout" />

            <TextView
                android:id="@+id/tvDescriptName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Fay &amp; Ber"
                android:textColor="@android:color/holo_blue_dark"
                android:textColorHighlight="@android:color/darker_gray"
                android:textStyle="bold"
                android:textSize="18sp"
                tools:ignore="HardcodedText,ObsoleteLayoutParam"
                android:layout_below="@+id/ivLogo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Nom"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/etNomComplet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="top"
                    android:ems="10"
                    android:hint="Nom Complet"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorAccent"
                    tools:ignore="HardcodedText,ObsoleteLayoutParam,RtlHardcoded" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:id="@+id/Phone"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etNomComplet"
                    android:gravity="top"
                    android:layout_centerHorizontal="true"
                    android:hint="Telephone"
                    android:ems="10"
                    android:inputType="phone"
                    android:textColor="@color/colorAccent"
                    tools:ignore="HardcodedText,ObsoleteLayoutParam,RtlHardcoded" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Mail"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/etMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="E-Mail"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:textColor="@color/colorAccent"
                    tools:ignore="HardcodedText,ObsoleteLayoutParam,RtlHardcoded"
                    android:layout_below="@+id/etIdentif"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Message"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/etMessage"
                    android:layout_width="match_parent"
                    android:layout_height="133dp"
                    android:layout_marginTop="10dp"
                    android:breakStrategy="balanced"
                    android:fitsSystemWindows="true"
                    android:gravity="top"
                    android:hint="@string/message"
                    android:inputType="textMultiLine"
                    android:padding="5dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnEnvoyer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="onLogButton"
        android:text="@string/envoyer"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="14sp" />
</RelativeLayout>
